--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.14",
     "framer-motion": "^11.11.1",
@@ -21,9 +22,11 @@
     "next-auth": "^4.24.8",
     "postcss": "8.4.47",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
+    "simplebar-react": "^3.2.6",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2"
   },
