--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.7.2",
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.14",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
@@ -31,6 +34,7 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "daisyui": "^4.12.12"
   }
 }
