--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.11.1",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
+    "paho-mqtt": "^1.1.0",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/paho-mqtt": "^1.0.10",
     "daisyui": "^4.12.12"
   }
 }
