--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
     "simplebar-react": "^3.2.6",
+    "swiper": "^11.1.14",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2"
   },
