--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "simplebar-react": "^3.2.6",
     "swiper": "^11.1.14",
     "tailwindcss": "3.4.13",
