--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.3.0",
     "simplebar-react": "^3.2.6",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14",
     "tailwindcss": "3.4.13",
     "typescript": "5.6.2"
