--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.7.2",
+    "@prisma/client": "^6.1.0",
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
@@ -17,14 +18,18 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.14",
     "firebase": "^10.12.4",
     "framer-motion": "^11.11.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "paho-mqtt": "^1.1.0",
     "postcss": "8.4.47",
+    "prisma": "^6.1.0",
     "react": "18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.3.1",
